# PACKET

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  local-adaptation.yml  source-claim-correction.yml
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/editorial/: citation-auditor.md  numeracy-checker.md  scope-keeper.md
.roles/panel-reviewer/: panel.md
.roles/parliament/: digital-equity-advocate.md  incumbent-isp-realist.md  network-engineer.md  network-planner.md  reliability-operations-engineer.md  resilience-security-engineer.md  telecom-economist.md
.roles/stakeholders/: anchor-institution.md  content-cloud-provider.md  rural-household.md  small-business.md  underserved-urban-household.md
context/waves/: PHASES.md
corpus/: SCHEMA.md  us-ar.md  us-ca.md  us-co.md  us-la.md  us-ms.md  us-nj.md  us-nm.md  us-ut.md  us-wa.md  us-wv.md
crates/packet-cli/: Cargo.toml
crates/packet-cli/src/: main.rs
crates/packet-corpus/: Cargo.toml
crates/packet-corpus/src/: lib.rs
crates/packet-gap/: Cargo.toml
crates/packet-network/: Cargo.toml
crates/packet-score/: Cargo.toml
crates/packet-tier/: Cargo.toml
data/: sources.md
docs/adoption/: README.md  local-adaptation-worksheet.md
docs/findings/: 2026-06-broadband-adoption-divide.md
docs/vtrace/: ARCHITECTURE.md  CODE_RIGOR.md  CONOPS.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  MISSION.md  REQUIREMENTS.md  REVIEW.md  SPECIFICATION_BASELINE.md  TRACE.md  VERIFICATION.md  WORK_PACKAGES.md
(+24 files in other folders)
